# BayesInfer

./: .env  .gitignore  Cargo.toml
docker/: docker-compose.yml
migrations/: 1_create.down.sql  1_create.up.sql  2_views.down.sql  2_views.up.sql
src/: bayes_model.rs  database.rs  init.sql  lib.rs  main.rs  test_type.rs
tests/: birth_test.rs
