[package]
name = "rust_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.4"
rusqlite = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"


sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.24"
